# NeuraAxis

./: .env.example  .gitignore  CONTRIBUTING.md  HOW_TO_RUN.md  README.md  RUNNING.md  docker-compose.yml  package-lock.json  package.json  turbo.json
services/ai-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/ai-service/alembic/: README.md
services/ai-service/alembic/versions/: 001_initial_schema.py  001_patient_search_indexes.py
services/ai-service/app/: __init__.py  main.py
services/ai-service/app/agents/: __init__.py  diagnostic.py  documentation.py  documentation_schemas.py  documentation_utils.py  drug_interaction.py  drug_interaction_schemas.py  icd10_validator.py  image_analysis.py  image_schemas.py  orchestrator.py  orchestrator_schemas.py  research.py  research_schemas.py  schemas.py  treatment.py  treatment_schemas.py
services/ai-service/app/api/: __init__.py
services/ai-service/app/core/: __init__.py  audit.py  cache.py  config.py  middleware.py  rbac.py  redis.py  security.py  security_utils.py
services/ai-service/models/: README.md
services/ai-service/scripts/: check_indexes.py  load_test_k6.js  run_security_scan.py
services/ai-service/tests/: README.md  conftest.py  test_auth.py  test_cases.py  test_dashboard.py  test_diagnostic_agent.py  test_diagnostic_integration.py  test_documentation.py  test_drug_interaction.py  test_image_analysis.py  test_orchestrator.py  test_patient_search.py  test_patients.py  test_research_agent.py  test_research_integration.py  test_treatment_agent.py  test_treatment_integration.py
(+191 files in other folders)
